--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>GibbonsGpaCalculator</title>
         <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
-        <script src="resources/js/script.js"></script>
+        <script src="resources/js/tableHandler.js" type="module" defer></script>
+        <script src="resources/js/updateTable.js"  type="module" defer ></script>
+        <script src="resources/js/calculateGPA.js" type="module" defer></script>
     </head>
     <body>
 
         <header>
+            <img id="logo" src = "https://assets.scorebooklive.com/uploads/production/school/1951/image/20191215045129_462_mascotOrig.png" alt="Gibbons Logo">
             <h1 id="title">Cardinal Gibbons GPA Calculator *Unofficial*</h1>
             <nav>
                 <ul>
@@ -17,11 +21,32 @@
         </header>
 
         <main>
+            <table id="gpaCalculator">
+                <thead>
+                <tr>
+                    <th>Period:</th>
+                    <th>Type: </th>
+                    <th>Grade:</th>
+                    <th>GPA:</th>
 
+                </tr>
+                </thead>
+                <tbody id="gpaTBody">
+                </tbody>
+                <tfoot id="gpaTFoot">
+                    <tr>
+                        <td style="background-color: #669965" id = "weightedGPA">Weighted Gpa:</td>
+                        <td style="background-color: #669965" id="unweightedGPA">Unweighted Gpa:</td>
+                        <td colspan="2"><button id="grade" style="background-color: #448843">Get GPA:</button></td>
+                    </tr>
+                </tfoot>
+            </table>
         </main>
 
         <footer>
-
+            <h2>This was written and developed by Noah Boussios</h2>
+            <h3>Contact me at <a href="mailto:noahboussi@gmail.com">NoahBoussi@gmail.com</a> for any bugs or tool recommendations</h3>
+            <h3>New updates will be coming soon to this webpage --Exam calculator & more</h3>
         </footer>
 
     </body>
