Minor Style Changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <tr>
                         <td style="background-color: #669965" id = "weightedGPA">Weighted Gpa:</td>
                         <td style="background-color: #669965" id="unweightedGPA">Unweighted Gpa:</td>
-                        <td colspan="2"><button id="grade" style="background-color: #448843">Get GPA:</button></td>
+                        <td colspan="2"><button id="grade">Get GPA:</button></td>
                     </tr>
                 </tfoot>
             </table>
