First Full Release --Text Fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
             <img id="logo" src = "https://assets.scorebooklive.com/uploads/production/school/1951/image/20191215045129_462_mascotOrig.png" alt="Gibbons Logo">
-            <h1 id="title">Cardinal Gibbons GPA Calculator *UNOFFICIAL*</h1>
+            <h1 id="title">Cardinal Gibbons' *UNOFFICIAL* Student Tools</h1>
             <!--<nav>
                 <ul>
                     <li>GPA Calculator</li>
