Design Update of 10/1/25'

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </tbody>
                 <tfoot id="gpaTFoot">
                     <tr>
-                        <td style="background-color: #669965" id = "weightedGPA">Weighted GPA:</td>
-                        <td style="background-color: #669965" id="unweightedGPA">Unweighted GPA:</td>
+                        <td  id = "weightedGPA">Weighted GPA:</td>
+                        <td  id="unweightedGPA">Unweighted GPA:</td>
                         <td colspan="2"><button id="grade">Get GPA:</button></td>
                     </tr>
                 </tfoot>
