--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--    document should load now-->
     <head>
         <title>GibbonsGpaCalculator</title>
         <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
@@ -24,6 +25,7 @@
                     <li>Exam Calculator</li>
                 </ul>
             </nav> -->
+
         </header>
 
         <main>
