--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <header>
             <img id="logo" src = "https://assets.scorebooklive.com/uploads/production/school/1951/image/20191215045129_462_mascotOrig.png" alt="Gibbons Logo">
-            <h1 id="title">Cardinal Gibbons' *UNOFFICIAL* Student Tools</h1>
+            <h1 id="title">Cardinal Gibbons' UNOFFICIAL Student Tools</h1>
             <!--<nav>
                 <ul>
                     <li>GPA Calculator</li>
@@ -53,12 +53,13 @@
                     </tr>
                 </tfoot>
             </table>
+            <button id="helpMe" onclick=" window.location.href='help.html' ">Help me or View updates</button>
         </main>
 
         <footer>
             <h3>This was written and developed by Noah Boussios</h3>
             <h4>Contact me at <a href="mailto:noahboussi@gmail.com">NoahBoussi@gmail.com</a> for any bugs or tool recommendations</h4>
-            <h4>New updates will be coming soon to this webpage --Exam calculator & more</h4>
+            <h4>View <a href="./help.html">README</a> for updates and help</h4>
         </footer>
 
     </body>
